// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableToolbar > renders correctly when all the item are displayed 1`] = `
<header
  class="
    align-center
    d-flex
    flex-wrap
    justify-space-between
    px-4
    py-2
    sy-table-toolbar
    v-locale--is-ltr
    v-theme--light
    v-toolbar
    v-toolbar--density-default
    v-toolbar--flat
  "
  minheight="56px"
  style="
    background-color: #FFFFFF;
    color: #000;
    caret-color: #000;
  "
>
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <p class="
      font-weight-bold
      mb-0
      mr-4
      mr-sm-0
      my-3
    ">
      5/5 lignes
    </p>
    <div class="sy-table-toolbar__search">
      <div class="
        flex-grow-1
        sy-form-input
        v-input
        v-input--center-affix
        v-input--density-compact
        v-input--horizontal
        v-locale--is-ltr
        v-text-field
        v-theme--light
      ">
        <!---->
        <div class="v-input__control">
          <div class="
            v-field
            v-field--appended
            v-field--center-affix
            v-field--single-line
            v-field--variant-outlined
            v-locale--is-ltr
            v-theme--light
          ">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div
                aria-hidden="true"
                aria-valuemax="100"
                aria-valuemin="0"
                class="
                  v-locale--is-ltr
                  v-progress-linear
                  v-theme--light
                "
                role="progressbar"
                style="
                  top: 0px;
                  height: 0px;
                  --v-progress-linear-height: 2px;
                "
              >
                <!---->
                <div
                  class="
                    bg-primary
                    v-progress-linear__background
                  "
                  style="opacity: NaN;"
                ></div>
                <div
                  class="
                    bg-primary
                    v-progress-linear__buffer
                  "
                  style="
                    opacity: NaN;
                    width: 0%;
                  "
                ></div>
                <transition-stub
                  appear="false"
                  css="true"
                  name="fade-transition"
                  persisted="false"
                >
                  <div class="v-progress-linear__indeterminate">
                    <div class="
                      bg-primary
                      long
                      v-progress-linear__indeterminate
                    "></div>
                    <div class="
                      bg-primary
                      short
                      v-progress-linear__indeterminate
                    "></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div
              class="v-field__field"
              data-no-activator=""
            >
              <!---->
              <label
                class="
                  v-field-label
                  v-label
                "
                for="input-0"
              >
                <!---->
                Rechercher
              </label>
              <!---->
              <input
                aria-describedby="input-0-messages"
                class="v-field__input"
                id="input-0"
                size="1"
                type="text"
              />
              <!---->
            </div>
            <transition-stub
              appear="false"
              css="true"
              name="expand-x-transition"
              persisted="false"
            >
              <div
                class="v-field__clearable"
                style="display: none;"
              >
                <i
                  aria-hidden="false"
                  aria-label="Clear Rechercher"
                  class="
                    mdi
                    mdi-close-circle
                    notranslate
                    v-icon
                    v-icon--clickable
                    v-icon--size-default
                    v-theme--light
                  "
                  role="button"
                  tabindex="0"
                ></i>
              </div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!---->
              <i
                aria-hidden="true"
                class="
                  0
                  0
                  0
                  0,1
                  0,1
                  0,1
                  11.11,16
                  12,5
                  14,12
                  14,9.5C14,7
                  14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41
                  15.41,12.59
                  16,9.5C16,11.11
                  3,9.5A6.5,6.5
                  5,7
                  5,9.5C5,12
                  7,14
                  9.5,14C12,14
                  9.5,16A6.5,6.5
                  9.5,3M9.5,5C7,5
                  9.5,5Z
                  M9.5,3A6.5,6.5
                  mdi
                  notranslate
                  v-icon
                  v-icon--size-default
                  v-theme--light
                "
              ></i>
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <!---->
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!-- v-if -->
    </div>
    <!---->
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="expand-transition"
    persisted="false"
  >
    <!---->
  </transition-stub>
</header>
`;

exports[`TableToolbar > renders correctly when loading 1`] = `
<header
  class="
    align-center
    d-flex
    flex-wrap
    justify-space-between
    px-4
    py-2
    sy-table-toolbar
    v-locale--is-ltr
    v-theme--light
    v-toolbar
    v-toolbar--density-default
    v-toolbar--flat
  "
  minheight="56px"
  style="
    background-color: #FFFFFF;
    color: #000;
    caret-color: #000;
  "
>
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <p class="
      font-weight-bold
      mb-0
      mr-4
      mr-sm-0
      my-3
    ">
      1 ligne
    </p>
    <div class="sy-table-toolbar__search">
      <div class="
        flex-grow-1
        loading
        sy-form-input
        v-input
        v-input--center-affix
        v-input--density-compact
        v-input--disabled
        v-input--horizontal
        v-locale--is-ltr
        v-text-field
        v-theme--light
      ">
        <!---->
        <div class="v-input__control">
          <div class="
            v-field
            v-field--appended
            v-field--center-affix
            v-field--disabled
            v-field--single-line
            v-field--variant-outlined
            v-locale--is-ltr
            v-theme--light
          ">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div
                aria-hidden="true"
                aria-valuemax="100"
                aria-valuemin="0"
                class="
                  v-locale--is-ltr
                  v-progress-linear
                  v-theme--light
                "
                role="progressbar"
                style="
                  top: 0px;
                  height: 0px;
                  --v-progress-linear-height: 2px;
                "
              >
                <!---->
                <div
                  class="
                    bg-primary
                    v-progress-linear__background
                  "
                  style="opacity: NaN;"
                ></div>
                <div
                  class="
                    bg-primary
                    v-progress-linear__buffer
                  "
                  style="
                    opacity: NaN;
                    width: 0%;
                  "
                ></div>
                <transition-stub
                  appear="false"
                  css="true"
                  name="fade-transition"
                  persisted="false"
                >
                  <div class="v-progress-linear__indeterminate">
                    <div class="
                      bg-primary
                      long
                      v-progress-linear__indeterminate
                    "></div>
                    <div class="
                      bg-primary
                      short
                      v-progress-linear__indeterminate
                    "></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div
              class="v-field__field"
              data-no-activator=""
            >
              <!---->
              <label
                class="
                  v-field-label
                  v-label
                "
                for="input-0"
              >
                <!---->
                Rechercher
              </label>
              <!---->
              <input
                aria-describedby="input-0-messages"
                class="v-field__input"
                disabled=""
                id="input-0"
                size="1"
                type="text"
              />
              <!---->
            </div>
            <!---->
            <div class="v-field__append-inner">
              <!---->
              <i
                aria-hidden="true"
                class="
                  0
                  0
                  0
                  0,1
                  0,1
                  0,1
                  11.11,16
                  12,5
                  14,12
                  14,9.5C14,7
                  14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41
                  15.41,12.59
                  16,9.5C16,11.11
                  3,9.5A6.5,6.5
                  5,7
                  5,9.5C5,12
                  7,14
                  9.5,14C12,14
                  9.5,16A6.5,6.5
                  9.5,3M9.5,5C7,5
                  9.5,5Z
                  M9.5,3A6.5,6.5
                  mdi
                  notranslate
                  v-icon
                  v-icon--size-default
                  v-theme--light
                "
              ></i>
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <!---->
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!-- v-if -->
    </div>
    <!---->
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="expand-transition"
    persisted="false"
  >
    <!---->
  </transition-stub>
</header>
`;

exports[`TableToolbar > renders correctly when the screen width <= 600px 1`] = `
<header
  class="
    align-center
    d-flex
    flex-wrap
    justify-space-between
    px-4
    py-2
    sy-table-toolbar
    v-locale--is-ltr
    v-theme--light
    v-toolbar
    v-toolbar--density-default
    v-toolbar--flat
  "
  minheight="56px"
  style="
    background-color: #FFFFFF;
    color: #000;
    caret-color: #000;
  "
>
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <p class="
      font-weight-bold
      mb-0
      mr-4
      mr-sm-0
      my-3
    ">
      1 ligne
    </p>
    <div class="sy-table-toolbar__search">
      <div class="
        flex-grow-1
        sy-form-input
        v-input
        v-input--center-affix
        v-input--density-compact
        v-input--horizontal
        v-locale--is-ltr
        v-text-field
        v-theme--light
      ">
        <!---->
        <div class="v-input__control">
          <div class="
            v-field
            v-field--appended
            v-field--center-affix
            v-field--single-line
            v-field--variant-outlined
            v-locale--is-ltr
            v-theme--light
          ">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div
                aria-hidden="true"
                aria-valuemax="100"
                aria-valuemin="0"
                class="
                  v-locale--is-ltr
                  v-progress-linear
                  v-theme--light
                "
                role="progressbar"
                style="
                  top: 0px;
                  height: 0px;
                  --v-progress-linear-height: 2px;
                "
              >
                <!---->
                <div
                  class="
                    bg-primary
                    v-progress-linear__background
                  "
                  style="opacity: NaN;"
                ></div>
                <div
                  class="
                    bg-primary
                    v-progress-linear__buffer
                  "
                  style="
                    opacity: NaN;
                    width: 0%;
                  "
                ></div>
                <transition-stub
                  appear="false"
                  css="true"
                  name="fade-transition"
                  persisted="false"
                >
                  <div class="v-progress-linear__indeterminate">
                    <div class="
                      bg-primary
                      long
                      v-progress-linear__indeterminate
                    "></div>
                    <div class="
                      bg-primary
                      short
                      v-progress-linear__indeterminate
                    "></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div
              class="v-field__field"
              data-no-activator=""
            >
              <!---->
              <label
                class="
                  v-field-label
                  v-label
                "
                for="input-0"
              >
                <!---->
                Rechercher
              </label>
              <!---->
              <input
                aria-describedby="input-0-messages"
                class="v-field__input"
                id="input-0"
                size="1"
                type="text"
              />
              <!---->
            </div>
            <transition-stub
              appear="false"
              css="true"
              name="expand-x-transition"
              persisted="false"
            >
              <div
                class="v-field__clearable"
                style="display: none;"
              >
                <i
                  aria-hidden="false"
                  aria-label="Clear Rechercher"
                  class="
                    mdi
                    mdi-close-circle
                    notranslate
                    v-icon
                    v-icon--clickable
                    v-icon--size-default
                    v-theme--light
                  "
                  role="button"
                  tabindex="0"
                ></i>
              </div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!---->
              <i
                aria-hidden="true"
                class="
                  0
                  0
                  0
                  0,1
                  0,1
                  0,1
                  11.11,16
                  12,5
                  14,12
                  14,9.5C14,7
                  14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41
                  15.41,12.59
                  16,9.5C16,11.11
                  3,9.5A6.5,6.5
                  5,7
                  5,9.5C5,12
                  7,14
                  9.5,14C12,14
                  9.5,16A6.5,6.5
                  9.5,3M9.5,5C7,5
                  9.5,5Z
                  M9.5,3A6.5,6.5
                  mdi
                  notranslate
                  v-icon
                  v-icon--size-default
                  v-theme--light
                "
              ></i>
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <!---->
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!-- v-if -->
    </div>
    <!---->
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="expand-transition"
    persisted="false"
  >
    <!---->
  </transition-stub>
</header>
`;

exports[`TableToolbar > renders correctly with content slot 1`] = `
<header
  class="
    align-center
    d-flex
    flex-wrap
    justify-space-between
    px-4
    py-2
    sy-table-toolbar
    v-locale--is-ltr
    v-theme--light
    v-toolbar
    v-toolbar--density-default
    v-toolbar--flat
  "
  minheight="56px"
  style="
    background-color: #FFFFFF;
    color: #000;
    caret-color: #000;
  "
>
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <p class="
      font-weight-bold
      mb-0
      mr-4
      mr-sm-0
      my-3
    ">
      1 ligne
    </p>
    <div class="sy-table-toolbar__search">
      <div class="
        flex-grow-1
        sy-form-input
        v-input
        v-input--center-affix
        v-input--density-compact
        v-input--horizontal
        v-locale--is-ltr
        v-text-field
        v-theme--light
      ">
        <!---->
        <div class="v-input__control">
          <div class="
            v-field
            v-field--appended
            v-field--center-affix
            v-field--single-line
            v-field--variant-outlined
            v-locale--is-ltr
            v-theme--light
          ">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div
                aria-hidden="true"
                aria-valuemax="100"
                aria-valuemin="0"
                class="
                  v-locale--is-ltr
                  v-progress-linear
                  v-theme--light
                "
                role="progressbar"
                style="
                  top: 0px;
                  height: 0px;
                  --v-progress-linear-height: 2px;
                "
              >
                <!---->
                <div
                  class="
                    bg-primary
                    v-progress-linear__background
                  "
                  style="opacity: NaN;"
                ></div>
                <div
                  class="
                    bg-primary
                    v-progress-linear__buffer
                  "
                  style="
                    opacity: NaN;
                    width: 0%;
                  "
                ></div>
                <transition-stub
                  appear="false"
                  css="true"
                  name="fade-transition"
                  persisted="false"
                >
                  <div class="v-progress-linear__indeterminate">
                    <div class="
                      bg-primary
                      long
                      v-progress-linear__indeterminate
                    "></div>
                    <div class="
                      bg-primary
                      short
                      v-progress-linear__indeterminate
                    "></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div
              class="v-field__field"
              data-no-activator=""
            >
              <!---->
              <label
                class="
                  v-field-label
                  v-label
                "
                for="input-0"
              >
                <!---->
                Rechercher
              </label>
              <!---->
              <input
                aria-describedby="input-0-messages"
                class="v-field__input"
                id="input-0"
                size="1"
                type="text"
              />
              <!---->
            </div>
            <transition-stub
              appear="false"
              css="true"
              name="expand-x-transition"
              persisted="false"
            >
              <div
                class="v-field__clearable"
                style="display: none;"
              >
                <i
                  aria-hidden="false"
                  aria-label="Clear Rechercher"
                  class="
                    mdi
                    mdi-close-circle
                    notranslate
                    v-icon
                    v-icon--clickable
                    v-icon--size-default
                    v-theme--light
                  "
                  role="button"
                  tabindex="0"
                ></i>
              </div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!---->
              <i
                aria-hidden="true"
                class="
                  0
                  0
                  0
                  0,1
                  0,1
                  0,1
                  11.11,16
                  12,5
                  14,12
                  14,9.5C14,7
                  14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41
                  15.41,12.59
                  16,9.5C16,11.11
                  3,9.5A6.5,6.5
                  5,7
                  5,9.5C5,12
                  7,14
                  9.5,14C12,14
                  9.5,16A6.5,6.5
                  9.5,3M9.5,5C7,5
                  9.5,5Z
                  M9.5,3A6.5,6.5
                  mdi
                  notranslate
                  v-icon
                  v-icon--size-default
                  v-theme--light
                "
              ></i>
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <!---->
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!-- v-if -->
    </div>
    <!---->
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="expand-transition"
    persisted="false"
  >
    <!---->
  </transition-stub>
</header>
`;

exports[`TableToolbar > renders correctly with no items 1`] = `
<header
  class="
    align-center
    d-flex
    flex-wrap
    justify-space-between
    px-4
    py-2
    sy-table-toolbar
    v-locale--is-ltr
    v-theme--light
    v-toolbar
    v-toolbar--density-default
    v-toolbar--flat
  "
  minheight="56px"
  style="
    background-color: #FFFFFF;
    color: #000;
    caret-color: #000;
  "
>
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <!-- v-if -->
    <div class="sy-table-toolbar__search">
      <div class="
        flex-grow-1
        sy-form-input
        v-input
        v-input--center-affix
        v-input--density-compact
        v-input--horizontal
        v-locale--is-ltr
        v-text-field
        v-theme--light
      ">
        <!---->
        <div class="v-input__control">
          <div class="
            v-field
            v-field--appended
            v-field--center-affix
            v-field--single-line
            v-field--variant-outlined
            v-locale--is-ltr
            v-theme--light
          ">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div
                aria-hidden="true"
                aria-valuemax="100"
                aria-valuemin="0"
                class="
                  v-locale--is-ltr
                  v-progress-linear
                  v-theme--light
                "
                role="progressbar"
                style="
                  top: 0px;
                  height: 0px;
                  --v-progress-linear-height: 2px;
                "
              >
                <!---->
                <div
                  class="
                    bg-primary
                    v-progress-linear__background
                  "
                  style="opacity: NaN;"
                ></div>
                <div
                  class="
                    bg-primary
                    v-progress-linear__buffer
                  "
                  style="
                    opacity: NaN;
                    width: 0%;
                  "
                ></div>
                <transition-stub
                  appear="false"
                  css="true"
                  name="fade-transition"
                  persisted="false"
                >
                  <div class="v-progress-linear__indeterminate">
                    <div class="
                      bg-primary
                      long
                      v-progress-linear__indeterminate
                    "></div>
                    <div class="
                      bg-primary
                      short
                      v-progress-linear__indeterminate
                    "></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div
              class="v-field__field"
              data-no-activator=""
            >
              <!---->
              <label
                class="
                  v-field-label
                  v-label
                "
                for="input-0"
              >
                <!---->
                Rechercher
              </label>
              <!---->
              <input
                aria-describedby="input-0-messages"
                class="v-field__input"
                id="input-0"
                size="1"
                type="text"
              />
              <!---->
            </div>
            <transition-stub
              appear="false"
              css="true"
              name="expand-x-transition"
              persisted="false"
            >
              <div
                class="v-field__clearable"
                style="display: none;"
              >
                <i
                  aria-hidden="false"
                  aria-label="Clear Rechercher"
                  class="
                    mdi
                    mdi-close-circle
                    notranslate
                    v-icon
                    v-icon--clickable
                    v-icon--size-default
                    v-theme--light
                  "
                  role="button"
                  tabindex="0"
                ></i>
              </div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!---->
              <i
                aria-hidden="true"
                class="
                  0
                  0
                  0
                  0,1
                  0,1
                  0,1
                  11.11,16
                  12,5
                  14,12
                  14,9.5C14,7
                  14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41
                  15.41,12.59
                  16,9.5C16,11.11
                  3,9.5A6.5,6.5
                  5,7
                  5,9.5C5,12
                  7,14
                  9.5,14C12,14
                  9.5,16A6.5,6.5
                  9.5,3M9.5,5C7,5
                  9.5,5Z
                  M9.5,3A6.5,6.5
                  mdi
                  notranslate
                  v-icon
                  v-icon--size-default
                  v-theme--light
                "
              ></i>
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <!---->
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!-- v-if -->
    </div>
    <!---->
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="expand-transition"
    persisted="false"
  >
    <!---->
  </transition-stub>
</header>
`;

exports[`TableToolbar > should render 1`] = `
<header
  class="
    align-center
    d-flex
    flex-wrap
    justify-space-between
    px-4
    py-2
    sy-table-toolbar
    v-locale--is-ltr
    v-theme--light
    v-toolbar
    v-toolbar--density-default
    v-toolbar--flat
  "
  minheight="56px"
  showaddbtn="true"
  style="
    background-color: #FFFFFF;
    color: #000;
    caret-color: #000;
  "
>
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <p class="
      font-weight-bold
      mb-0
      mr-4
      mr-sm-0
      my-3
    ">
      1/2 lignes
    </p>
    <div class="sy-table-toolbar__search">
      <div class="
        flex-grow-1
        sy-form-input
        v-input
        v-input--center-affix
        v-input--density-compact
        v-input--horizontal
        v-locale--is-ltr
        v-text-field
        v-theme--light
      ">
        <!---->
        <div class="v-input__control">
          <div class="
            v-field
            v-field--appended
            v-field--center-affix
            v-field--single-line
            v-field--variant-outlined
            v-locale--is-ltr
            v-theme--light
          ">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div
                aria-hidden="true"
                aria-valuemax="100"
                aria-valuemin="0"
                class="
                  v-locale--is-ltr
                  v-progress-linear
                  v-theme--light
                "
                role="progressbar"
                style="
                  top: 0px;
                  height: 0px;
                  --v-progress-linear-height: 2px;
                "
              >
                <!---->
                <div
                  class="
                    bg-primary
                    v-progress-linear__background
                  "
                  style="opacity: NaN;"
                ></div>
                <div
                  class="
                    bg-primary
                    v-progress-linear__buffer
                  "
                  style="
                    opacity: NaN;
                    width: 0%;
                  "
                ></div>
                <transition-stub
                  appear="false"
                  css="true"
                  name="fade-transition"
                  persisted="false"
                >
                  <div class="v-progress-linear__indeterminate">
                    <div class="
                      bg-primary
                      long
                      v-progress-linear__indeterminate
                    "></div>
                    <div class="
                      bg-primary
                      short
                      v-progress-linear__indeterminate
                    "></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div
              class="v-field__field"
              data-no-activator=""
            >
              <!---->
              <label
                class="
                  v-field-label
                  v-label
                "
                for="input-0"
              >
                <!---->
                Rechercher
              </label>
              <!---->
              <input
                aria-describedby="input-0-messages"
                class="v-field__input"
                id="input-0"
                size="1"
                type="text"
              />
              <!---->
            </div>
            <transition-stub
              appear="false"
              css="true"
              name="expand-x-transition"
              persisted="false"
            >
              <div
                class="v-field__clearable"
                style="display: none;"
              >
                <i
                  aria-hidden="false"
                  aria-label="Clear Rechercher"
                  class="
                    mdi
                    mdi-close-circle
                    notranslate
                    v-icon
                    v-icon--clickable
                    v-icon--size-default
                    v-theme--light
                  "
                  role="button"
                  tabindex="0"
                ></i>
              </div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!---->
              <i
                aria-hidden="true"
                class="
                  0
                  0
                  0
                  0,1
                  0,1
                  0,1
                  11.11,16
                  12,5
                  14,12
                  14,9.5C14,7
                  14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41
                  15.41,12.59
                  16,9.5C16,11.11
                  3,9.5A6.5,6.5
                  5,7
                  5,9.5C5,12
                  7,14
                  9.5,14C12,14
                  9.5,16A6.5,6.5
                  9.5,3M9.5,5C7,5
                  9.5,5Z
                  M9.5,3A6.5,6.5
                  mdi
                  notranslate
                  v-icon
                  v-icon--size-default
                  v-theme--light
                "
              ></i>
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <!---->
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!-- v-if -->
    </div>
    <!---->
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="expand-transition"
    persisted="false"
  >
    <!---->
  </transition-stub>
</header>
`;
